--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<link rel="stylesheet" href="vendor/device-mockups/device-mockups.min.css">
 
 		<!-- Theme CSS -->
-		<link href="css/new-age.min.css" rel="stylesheet">
+		<link href="css/new-age.css" rel="stylesheet">
 
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -56,7 +56,7 @@
 							<a class="page-scroll" href="#features">Features</a>
 						</li>
 						<li>
-							<a class="page-scroll" href="#signup">Signup</a>
+							<a class="page-scroll" href="#signup">Sign up</a>
 						</li>
 					</ul>
 				</div>
@@ -84,7 +84,7 @@
 								<div class="device">
 									<div class="screen">
 										<!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-										<img src="img/demo-screen-1.jpg" class="img-responsive" alt="">
+										<img src="img/login.jpg" class="img-responsive" alt="" height="100%" width="100%">
 									</div>
 									<div class="button">
 										<!-- You can hook the "home button" to some JavaScript events or just remove it -->
