--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 								<div class="device">
 									<div class="screen">
 										<!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-										<img src="img/demo-screen-1.jpg" class="img-responsive" alt="">
+										<img src="img/discover_people.jpg" class="img-responsive" alt="">
 									</div>
 									<div class="button">
 										<!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -127,7 +127,7 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="feature-item">
-										<i class="icon-screen-smartphone text-primary"></i>
+										<i><img class="icon-theme" src="img/phonebook.png"></i>
 										<h3>Phone Book Reinvented</h3>
 										<p class="text-muted">
 											Cirxle merges your current phone book and social networks, and gives you a social book. It combines contacts, dialing and business cards in one app and ensures it's all up-to-date.
@@ -136,7 +136,7 @@
 								</div>
 								<div class="col-md-6">
 									<div class="feature-item">
-										<i class="icon-camera text-primary"></i>
+										<i><img class="icon-theme" src="img/discoverable.png"></i>
 										<h3>Discoverable</h3>
 										<p class="text-muted">
 											Discover and connect with the right people at any given event or networking situation by live browsing the names and professions of the people attending the same event.
@@ -147,7 +147,7 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="feature-item">
-										<i class="icon-present text-primary"></i>
+										<i><img class="icon-theme" src="img/event.png"></i>
 										<h3>Event</h3>
 										<p class="text-muted">
 											Discover suitable events locally through our daily suggestions of events, based on your profession and interests.
@@ -156,7 +156,7 @@
 								</div>
 								<div class="col-md-6">
 									<div class="feature-item">
-										<i class="icon-lock-open text-primary"></i>
+										<i><img class="icon-theme" src="img/share.png"></i>
 										<h3>Sharing</h3>
 										<p class="text-muted">
 											Immediately share your virtual business card and contact information with people around you with a tap or a flick.
