--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 
 	<body id="page-top">
 
-		<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+		<!-- <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
 			<div class="container">
-				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 						<span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
@@ -49,7 +48,6 @@
 					<a class="navbar-brand page-scroll" href="#page-top">Cirxle: A New Way to Connect</a>
 				</div>
 
-				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
@@ -60,10 +58,8 @@
 						</li>
 					</ul>
 				</div>
-				<!-- /.navbar-collapse -->
 			</div>
-			<!-- /.container-fluid -->
-		</nav>
+		</nav> -->
 
 		<header>
 			<div class="container">
