--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="">
 		<meta name="author" content="">
@@ -40,25 +41,25 @@
 	<body id="page-top">
 
 		<!-- <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-					</button>
-					<a class="navbar-brand page-scroll" href="#page-top">Cirxle: A New Way to Connect</a>
-				</div>
+		<div class="container">
+		<div class="navbar-header">
+		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		<span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+		</button>
+		<a class="navbar-brand page-scroll" href="#page-top">Cirxle: A New Way to Connect</a>
+		</div>
 
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							<a class="page-scroll" href="#features">Features</a>
-						</li>
-						<li>
-							<a class="page-scroll" href="#signup">Sign up</a>
-						</li>
-					</ul>
-				</div>
-			</div>
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		<ul class="nav navbar-nav navbar-right">
+		<li>
+		<a class="page-scroll" href="#features">Features</a>
+		</li>
+		<li>
+		<a class="page-scroll" href="#signup">Sign up</a>
+		</li>
+		</ul>
+		</div>
+		</div>
 		</nav> -->
 
 		<header>
@@ -170,13 +171,15 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-7">
-							<h2> We <i class="fa fa-heart"></i> new friends! </h2>
-							<h3> Stop Waiting </h3><h3> Get Connected </h3>
-							<!-- Begin MailChimp Signup Form -->
+							<h2>We <i class="fa fa-heart"></i> new friends!</h2>
+							<h3>Stop Waiting</h3>
+							<h3>Get Connected</h3>
+							<h3>Get an invite to beta!</h3>
+
+							<!-- Begin MailChimp Signup Form
 							<div id="mc_embed_signup">
 								<form action="//cirxle.us13.list-manage.com/subscribe/post?u=0f971340d8edee6acd2fd9b4b&amp;id=fe50603799" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 									<div id="form-group">
-										<h3>Get an invite to beta!</h3>
 										<div class="mc-field-group">
 											<label for="mce-EMAIL">Email Address </label>
 											<input type="email" value="" name="EMAIL" class="required email field" id="mce-EMAIL">
@@ -186,7 +189,7 @@
 											<div class="response" id="mce-success-response" style="display:none"></div>
 										</div>
 										<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-										<div style="position: absolute; left: -5000px;" aria-hidden="true">
+										<!-- <div style="position: absolute; left: -5000px;" aria-hidden="true">
 											<input type="text" name="b_0f971340d8edee6acd2fd9b4b_fe50603799" tabindex="-1" value="">
 										</div>
 										<br>
@@ -197,6 +200,64 @@
 								</form>
 							</div>
 							<!--End mc_embed_signup-->
+
+							<!-- sendinblue -->
+							<div id="sib_embed_signup" style="padding: 0px; width: 50%">
+								<div class="forms-builder-wrapper" style="position:relative;margin-left: auto;margin-right: auto;">
+									<input type="hidden" id="sib_embed_signup_lang" value="en">
+									<input type="hidden" id="sib_embed_invalid_email_message" value="That email address is not valid. Please try again">
+									<input type="hidden" name="primary_type" id="primary_type" value="email">
+									<div id="sib_loading_gif_area" style="position: absolute;z-index: 9999;display: none;">
+										<img src="https://my.sendinblue.com/public/theme/version4/assets/images/loader_sblue.gif" style="display: block;margin-left: auto;margin-right: auto;position: relative;top: 40%;">
+									</div>
+									<form class="description" id="theform" name="theform" action="https://my.sendinblue.com/users/subscribeembed/js_id/2ma9h/id/1" onsubmit="return false;">
+										<input type="hidden" name="js_id" id="js_id" value="2ma9h">
+										<input type="hidden" name="listid" id="listid" value="2">
+										<input type="hidden" name="from_url" id="from_url" value="yes">
+										<input type="hidden" name="hdn_email_txt" id="hdn_email_txt" value="">
+										<!-- input and message area -->
+										<div class="container rounded">
+
+											<input type="hidden" name="req_hid" id="req_hid" value="" style="font-size: 13px;">
+											<div class="header" style="padding:0 20px;">
+												<h1 class="title editable" data-editfield="newsletter_name"  style="font-weight: normal; text-align: left; font-size: 45px; margin-bottom: 2px; padding: 0px; margin-top: 0px; font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; color: rgb(35, 35, 35); display: none;">My Newsletter</h1>
+												<h3 id="company-name"  style="font-weight: normal; text-align: left; font-size: 25px; margin-bottom: 12px; padding: 0px; margin-top: 0px; font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; color: rgb(52, 52, 52); display: none;">By</h3>
+											</div>
+											<div class="description editable" data-editfield="newsletter_description"  style="padding: 0px 20px 15px; border-bottom: 1px solid rgb(204, 204, 204); font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; color: rgb(52, 52, 52); font-size: 17px; display: none;">
+												What type of content do you plan to share with your subscribers?
+											</div>
+											<div class="view-messages" style=" margin:5px 0;"></div>
+											<!-- an email as primary -->
+											<div class="primary-group email-group forms-builder-group ui-sortable" style="">
+												<div class="row mandatory-email" style="padding: 10px 20px; position: relative; font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; color: rgb(52, 52, 52); font-size: 17px;">
+													<div class="lbl-tinyltr lbl">
+														Enter your email address to subscribe.
+														<red style="color:#ff0000;">
+															*
+														</red>
+													</div>
+													<input type="text" name="email" id="email" class="field" value="">
+													<div style="clear:both;"></div>
+													<div class="hidden-btns">
+														<a class="btn move" href="#"><i class="fa fa-arrows"></i></a>
+														<br>
+														<!--<a class="btn btn-danger delete"  href="#"><i class="fa fa-trash-o fa-inverse"></i></a>-->
+													</div>
+												</div>
+											</div>
+											<!-- end of primary -->
+											<div class="byline" style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; color: rgb(52, 52, 52); font-weight: bold; font-size: 16px; display: block;">
+												<button class="button editable  mc-btn mc-btn-outline mc-btn-xl" type="submit" data-editfield="subscribe">
+													Subscribe
+												</button>
+											</div>
+											<div style="clear:both;"></div>
+										</div>
+									</form>
+								</div>
+							</div>
+							<!-- end sendinblue -->
+
 						</div>
 						<br>
 						<div class="col-sm-5">
@@ -241,19 +302,25 @@
 		<script src="js/new-age.min.js"></script>
 
 		<!-- MailChimp Validation Script -->
-		<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+		<!-- <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
 		<script type='text/javascript'>
-			( function($) {
-					window.fnames = new Array();
-					window.ftypes = new Array();
-					fnames[0] = 'EMAIL';
-					ftypes[0] = 'email';
-					fnames[1] = 'FNAME';
-					ftypes[1] = 'text';
-					fnames[2] = 'LNAME';
-					ftypes[2] = 'text';
-				}(jQuery));
-			var $mcj = jQuery.noConflict(true);
+		( function($) {
+		window.fnames = new Array();
+		window.ftypes = new Array();
+		fnames[0] = 'EMAIL';
+		ftypes[0] = 'email';
+		fnames[1] = 'FNAME';
+		ftypes[1] = 'text';
+		fnames[2] = 'LNAME';
+		ftypes[2] = 'text';
+		}(jQuery));
+		var $mcj = jQuery.noConflict(true);
+		</script> -->
+
+		<!-- sendinblue script -->
+		<script type='text/javascript' src='https://my.sendinblue.com/public/theme/version4/assets/js/src/subscribe-validate.js'></script>
+		<script type='text/javascript'>
+			jQuery.noConflict(true);
 		</script>
 
 	</body>
